nixos/manifests/database/resources/postgres.yaml
  # db:
  #   image: postgres:14.1-alpine
  #   restart: always
  #   environment:
  #     - POSTGRES_USER=${POSTGRES_USER}
  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
  #   ports:
  #     - '5432:5432'
  #   volumes: 
  #     - db:/var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  restartPolicy: Always
  resources:
    requests:
      cpu: 1000m
      memory: 1Gi
    limits:
      memory: 1Gi
  containers:
    - image: postgres:14.1-alpine
      name: postgres
      volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: init
          mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: postgres-pvc

    - name: init
      secret:
        secretName: database-init
        items:
          - key: init.sql
            path: init.sql
